Translate table headers and update remaining days text to English; add README file.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
                 <table id="hackathons-table">
                     <thead>
                         <tr>
-                            <th>Nombre</th>
-                            <th>Premio</th>
-                            <th>Fecha Envío</th>
+                            <th>Name</th>
+                            <th>Prizes</th>
+                            <th>Subbmit</th>
                             <th>Deadline</th>
-                            <th>Días Restantes</th>
-                            <th>Enlace</th>
+                            <th>Remaining Days</th>
+                            <th>Link</th>
                         </tr>
                     </thead>
                     <tbody id="hackathons-container">
