--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hackathons Data</h1>
+    <h1>Build events</h1>
     <div id="table-container"></div>
     <script src="scripts.js"></script>
 </body>
