--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hackathons Table</title>
+    <title>Eve</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Build events</h1>
+    <h1>Eventes</h1>
     <div id="table-container"></div>
     <script src="scripts.js"></script>
 </body>
